--- a/work/musicals.html
+++ b/work/musicals.html
@@ -50,10 +50,10 @@ Your browser does not support the audio element.
 </audio></figure>
         <h3>Mona Judy America</h3>
         <iframe src="https://docs.google.com/document/d/1APypKm-o8UwNMkLhtAZMPCndhX0Jy8Tx/pub?embedded=true" frameborder="0" width="90%" padding-left="16px" height="500" loading="lazy"></iframe>
-        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>  
-      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <h3>Martin Dreams</h3>
         <figure><figcaption>I'm Just a Man, Coretta</figcaption>
         <audio controls><source src="/src/audio/I'm Just a Man, Coretta.m4a" type="audio/x-m4a">
@@ -64,9 +64,9 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio></figure>
         <h3>Herb Smokes Herb</h3>
-         <iframe src="https://docs.google.com/document/d/18UTSAKArckpdtTHZftkonIJna8OY5tf2/pub?embedded=true" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
+         <iframe src="https://docs.google.com/document/d/18UTSAKArckpdtTHZftkonIJna8OY5tf2/pub?embedded=true" loading="lazy" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
         <h3>Daphne in Dimension Nine</h3>
-        <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
+        <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" loading="lazy" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
       </div>  
     <div class="footer-container"></div>
     </div>
