--- a/work/drama.html
+++ b/work/drama.html
@@ -36,9 +36,7 @@
 The thing about my work that’s quite unusual is how varied it is in tone and subject matter. The Pied Piper is a sweet, lighthearted musical. <em>Saul</em> is a tragedy. <em>The Odyssey</em> is soaring and romantic. <em>The Unwitnessing of a Murder</em> is as dark as a black hole. And there are many others, each with it’s specific world.
 All I can say is life is similarly varied. Imagine all the things happening at this very moment. While lovers are falling in love, others are being tortured. While bombs fall from the sky, babies are being born.
 <br>That is life. That is art.
-
           </p>
-
       <section class="tiles">
 	<article class="style1">
 		<span class="image">
@@ -64,8 +62,9 @@ All I can say is life is similarly varied. Imagine all the things happening at t
 		</article>
       </section>
     </div>
-    <div class="footer-container"></div>
     </div>
+  </div>
+    <div class="footer-container"></div>
   </div>
 </body>
 </html>
