--- a/work/musicals.html
+++ b/work/musicals.html
@@ -68,8 +68,9 @@ Your browser does not support the audio element.
         <h3>Daphne in Dimension Nine</h3>
         <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" loading="lazy" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
       </div>  
-    <div class="footer-container"></div>
     </div>
+  </div>
+    <div class="footer-container"></div>
   </div>
 </body>
 </html>
