--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <div class="content">
       <div class="content-table flex-column">
         <h1>News</h1>
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" width="500" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" width="100%" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     </div>
   </div>
     <div class="footer-container"></div>
 </div>
 </body>
 </html>
+oving focus. Alternatively, use
