--- a/work/childrensstories.html
+++ b/work/childrensstories.html
@@ -36,7 +36,17 @@ They fall into two groups. There are the stories that just came. Then there are 
           </p>
         <h3>Socrates The Cat</h3>
         <iframe src="https://docs.google.com/document/d/1A_vyXy5uD9U6730JV2hvVl_Pr7lOyHWd/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
-        </div>
+        <h3>Sparrows on the Roof</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRE7J8oET_CV3A4tzdodTT3rlZSMUgsAAB4nueLM_o9iyLXPS2FYBAo6h3wt7mD3g/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>Isaac the Pig</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ5CpVbvA6pzNbXBZH6kGzhrISf4NvQiEghDBwEYWF9u_s5IExix3e-emb7ih-fgg/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>The Little Book of Kisses </h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQRw-4oWgUJ-Ae4_WeZ3rbm21rjVctBfv0dIlLokO17ouPZ8E7ubBCUo6En5scL_A/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>Bath Day </h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRlpJzx5EQib5K7ErAx3mi69NHLkVjwAYojbX5ZvnUfY50NL8MAGptKdud3aIvkqw/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>Funny Hair Day </h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRQbNzbeUAZhh82kHMAJDhdYyvSJaiMjaPYalO-RvmWIXSJK-HbJbWYz_8fN1TVeA/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+      </div>
       </div>
     </div>
     <div class="footer-container"></div>
