--- a/work/philosophy.html
+++ b/work/philosophy.html
@@ -38,6 +38,12 @@ I’ll add that though these pieces are intended to cohere as a whole –the wor
           </p>
         <h3>1a.In Defense of the Self</h3>
         <iframe src="https://docs.google.com/document/d/1tuEHWFb8uLJCpZFgZxASe4bvLfsH3sBa/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>1b. Exursion, Fascist Logic</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEjqNGyXocrtS6dxgyuVv6ZH8Xs4gbL7h6s6VgQcgYCA6Rl6FJv2XjDdiuqpwoew/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>2a. Brains in a Vat</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSHW8dih6hXuyiQLTFO0xpemIWYzADI6wC1BZ2R8q41TYqs8gr2-ZIOklWxGby3nw/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
+        <h3>2b. An Excurion Into Everything that is the Case</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQnJfz4tpVNSx-WvNZnx9POoMVZygQWdSJCEChkBxEah6CqOMO39kjNqtbBVR575g/pub?embedded=true" frameborder="0" width="100%" height="500"></iframe>
         </div>
       </div>
     </div>
