--- a/work/musicals.html
+++ b/work/musicals.html
@@ -29,7 +29,7 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <a href="/work/drama.html"><button style="font-size:24px">Return to Drama<i class="fa fa-arrow-left"></i></button></a>
+        <a href="/work/drama.html"><button><i class="fa fa-arrow-left"></i></button></a>
         <h2>Musicals</h2>
         <h3>Pied Piper</h3>
         <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" width="100%" height="500" loading="eager"></iframe>
