--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="/index.html">Howard Zilber</a>
+      <a href="/">Howard Zilber</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img src="/src/images/icons/menu.png">
@@ -11,7 +11,7 @@
     <div class="menu-items flex-row-center flex-item">
       <a class="menu-index" href="/index.html">Home</a>
       <div class="dropdown">
-        <a class="dropbtn" href="/work.html">Work<i class="fas fa-caret-down"></i></a>
+        <a class="dropbtn" href="/work/">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <a href="/work/childrensstories.html">Children's Stories</a>
           <a href="/work/drama.html">Drama</a>
