--- a/footer.html
+++ b/footer.html
@@ -5,10 +5,9 @@
     <div class="banner">
      <div class="banner-table flex-row-space-between">
     <div class="banner-items flex-row-left flex-item">
-      <a class="menu-index" href="index.html">Home</a><br>
-      <a class="menu-engineering" href="engineering.html">Engineering</a><br>
-      <a class="menu-theatre" href="theatre.html">Theatre</a><br>
-     <a href="projects.html">Projects</a><br>
+      <a class="menu-index" href="/">Home</a><br>
+      <a class="menu-work" href="/work/">Work</a><br>
+      <a class="menu-about" href="about.html">About</a><br>
       <a class="menu-contact" href="contact.html">Contact</a>
          </div>
           <div class="banner-items flex-column-right flex-item">
