--- a/index.html
+++ b/index.html
@@ -2,37 +2,87 @@
 <html>
 
 <head>
-  <title>Howard Zilber |Home</title>
+  <title>Howard Zilber | Home</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" sizes="16x16" href="/src/images/icons/howardzilber.ico">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/css/controls.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/menu.js"></script>
   <script src="/js/footer.js"></script>
   <style>
+    .content-container {
+      max-width: 1100px;
+      margin: 50px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+    .iframe-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    iframe {
+      border-radius: 10px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    iframe:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .footer-container {
+      text-align: center;
+      padding: 20px;
+      background: #2c3e50;
+      color: white;
+      margin-top: 40px;
+      border-top: 2px solid #34495e;
+    }
+
+    .menu-container {
+      background-color: #2c3e50;
+      padding: 10px 0;
+      text-align: center;
+    }
+
     .menu-index {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
       font-weight: 700 !important;
+      font-size: 1.2em;
     }
   </style>
 </head>
 
 <body>
-  <div class="menu-container"></div>
+  <div class="menu-container">
+    <p class="menu-index">Welcome to Howard Zilber's Official Website</p>
+  </div>
+
   <div class="content-container">
-    <div class="content">
-      <div class="content-table flex-column">
-        <h1>News</h1>
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" width="100%" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    <h1>Latest News</h1>
+
+    <div class="iframe-container">
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" width="500" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     </div>
   </div>
-    <div class="footer-container"></div>
-</div>
+
+  <div class="footer-container"></div>
+
 </body>
+
 </html>
