--- a/menu.html
+++ b/menu.html
@@ -3,13 +3,15 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="/">Howard Zilber</a>
+      <a href="/">
+          <img src="/src/images/icons/howardzilber_512x512_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">
+        </a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img src="/src/images/icons/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a class="menu-index" href="/index.html">Home</a>
+      <a class="menu-index" href="/">Home</a>
       <div class="dropdown">
         <a class="dropbtn" href="/work/">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
