--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="/">
+      <a href="/" style="display: inline-block; padding: 0; margin: 0; border: none;">
           <img src="/src/images/icons/howardzilber_512x512_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">
         </a>
     </div>
