--- a/about.html
+++ b/about.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <title>Howard Zilber |About</title>
+  <title>Howard Zilber | About</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" sizes="16x16" href="/src/images/icons/howardzilber.ico">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="css/custom.css" media="screen" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
@@ -16,39 +15,119 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
-    .menu-about {
-      color: rgb(255, 255, 255) !important;
-      opacity: 1 !important;
-      font-weight: 700 !important;
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      color: #333;
     }
+
+    .menu-container {
+      background-color: #2c3e50;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .content-container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 30px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      font-size: 2em;
+      color: #2c3e50;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.1em;
+      line-height: 1.6;
+      color: #555;
+      margin-bottom: 20px;
+    }
+
+    .image {
+      display: block;
+      max-width: 250px;
+      border-radius: 50%;
+      margin: 20px auto;
+      border: 5px solid #2c3e50;
+    }
+
+    .content-table {
+      padding: 20px;
+    }
+
+    .footer-container {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 40px;
+    }
+
+    .text {
+      text-align: justify;
+      margin-bottom: 20px;
+    }
+
+    .signature {
+      margin-top: 30px;
+      font-style: italic;
+    }
+
   </style>
 </head>
 
 <body>
-  <div class="menu-container"></div>
+  <div class="menu-container">
+    <h1 style="color: white;">Howard Zilber | About</h1>
+  </div>
+
   <div class="content-container">
     <div class="content">
-      <div class="content-table flex-column">
+      <div class="content-table">
         <h2>Letter from The Artist</h2>
-          <p class="text">
-              
-              Friends,<br>
-When I was very young I read history and biography and was excited by politics. I wanted to help perfect the world through political action. But during my teenage years it became obvious that my true interests and talents were intellectual and artistic. I formed a vague intention of being a writer.
-In college I studied philosophy, and in graduate school as well. I began to have ideas I wanted to develop but I knew that to do so I needed to further educate myself and gather life experience.
-The desire to write was still there. I assumed it would be fiction. But my early discarded stories were too self-conscious, idea driven, and derivative. I read a book by Walter Kerr on the theatre that emphasized the mythic larger than life quality of the best of drama. I was convinced.
-Since then I have written many plays and musicals. And when I manage to get them before an audience they are very well received. Over the years some poetry and children’s stories sneaked in. In recent years realizing that my philosophical ideas had matured, a clearer understanding of mortality nudged me into writing philosophy and Torah commentary.
-It may seem that I am writing too many things. I may be. But all the work I do I feel compelled to do. I am much better at making work than marketing it, and I would much rather be at home writing than in a meeting. But I do not make my work just for me. I have a strong urge to share it with others. That explains why this website was created.
-Though I wish to share, all the work on this website is protected by copyright and cannot be used in commercial way without my permission.
-That said, please look, read, listen and enjoy. Any helpful comments would be appreciated, as would opportunities for collaboration.  I would especially appreciate any help that get this work a bit further into the world.
-I have two reasons I think I am here on earth: to be father to my daughter Zoey, and to make this work.
-All blessings,<br>
-Howard<br>
-<img class="image max-width-300" src="src/images/howardzilber_headshot.png">
-          </p>
-        </div>
+        <p class="text">
+          Friends,<br>
+          When I was very young, I read history and biography and was excited by politics. I wanted to help perfect the world through political action. But during my teenage years, it became obvious that my true interests and talents were intellectual and artistic. I formed a vague intention of being a writer.
+        </p>
+        <p class="text">
+          In college, I studied philosophy, and in graduate school as well. I began to have ideas I wanted to develop, but I knew that to do so I needed to further educate myself and gather life experience.
+        </p>
+        <p class="text">
+          The desire to write was still there. I assumed it would be fiction. But my early discarded stories were too self-conscious, idea-driven, and derivative. I read a book by Walter Kerr on the theatre that emphasized the mythic, larger-than-life quality of the best of drama. I was convinced.
+        </p>
+        <p class="text">
+          Since then, I have written many plays and musicals. And when I manage to get them before an audience, they are very well received. Over the years, some poetry and children’s stories sneaked in. In recent years, realizing that my philosophical ideas had matured, a clearer understanding of mortality nudged me into writing philosophy and Torah commentary.
+        </p>
+        <p class="text">
+          It may seem that I am writing too many things. I may be. But all the work I do, I feel compelled to do. I am much better at making work than marketing it, and I would much rather be at home writing than in a meeting. But I do not make my work just for me. I have a strong urge to share it with others. That explains why this website was created.
+        </p>
+        <p class="text">
+          Though I wish to share, all the work on this website is protected by copyright and cannot be used in a commercial way without my permission.
+        </p>
+        <p class="text">
+          That said, please look, read, listen, and enjoy. Any helpful comments would be appreciated, as would opportunities for collaboration. I would especially appreciate any help that gets this work a bit further into the world.
+        </p>
+        <p class="text signature">
+          I have two reasons I think I am here on earth: to be father to my daughter Zoey, and to make this work.<br><br>
+          All blessings,<br>
+          Howard
+        </p>
+
+        <img class="image" src="src/images/howardzilber_headshot.png" alt="Howard Zilber Headshot">
       </div>
     </div>
-    <div class="footer-container"></div>
   </div>
+
+  <div class="footer-container"></div>
 </body>
+
 </html>
