--- a/index.html
+++ b/index.html
@@ -23,26 +23,35 @@
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     }
-    .iframe-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-      padding: 20px;
-      background-color: #f9f9f9;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+   .iframe-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 100%; 
+  max-width: 500px; 
+  height: auto;
+}
 
-    iframe {
-      border-radius: 10px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+iframe {
+  width: 100%; 
+  height: 100%;
+  max-width: 500px;
+  max-height: 589px; 
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-    iframe:hover {
-      transform: scale(1.03);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-    }
+iframe:hover {
+  transform: scale(1.03);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
 
     .footer-container {
       text-align: center;
@@ -51,12 +60,6 @@
       color: white;
       margin-top: 40px;
       border-top: 2px solid #34495e;
-    }
-
-    .menu-container {
-      background-color: #2c3e50;
-      padding: 10px 0;
-      text-align: center;
     }
 
     .menu-index {
