--- a/work/drama/musicals.html
+++ b/work/drama/musicals.html
@@ -20,56 +20,119 @@
       opacity: 1 !important;
       font-weight: 700 !important;
     }
+     iframe {
+      width: 100%;
+      margin-bottom: 20px;
+      border: 1px solid #ddd;
+    }
+
+    figure {
+      margin: 20px 0;
+    }
+
+    figcaption {
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: #444;
+      margin-bottom: 10px;
+    }
+
+    /audio {
+      width: 100%;
+      margin-top: 10px;
+    }
   </style>
 </head>
 
 <body>
-  <div class="menu-container"></div>
-  <div class="content-container">
+  <div class="menu-container">
+   <main class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <a href="/work/drama/"><button><i class="fa fa-arrow-left"></i></button></a>
+        <a href="/work/drama/" class="back-btn">
+          <button class="dropbtn"><i class="fa fa-arrow-left"></i> Back</button>
+        </a>
         <h2>Musicals</h2>
-        <h3>Pied Piper</h3>
-        <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" width="100%" height="500" loading="eager"></iframe>
-        <figure><figcaption>I'm The Pied Piper</figcaption>
-        <audio controls><source src="/src/audio/I'm The Pied Piper.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <figure><figcaption>It's Nice To Be Nice</figcaption>
-        <audio controls><source src="/src/audio/It's Nice To Be Nice.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <figure><figcaption>Rats</figcaption>
-        <audio controls><source src="/src/audio/Rats.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <figure><figcaption>I Will Never Climb a Mountain</figcaption>
-        <audio controls><source src="/src/audio/I Will Never Climb a Mountain.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <h3>Mona Judy America</h3>
-        <iframe src="https://docs.google.com/document/d/1APypKm-o8UwNMkLhtAZMPCndhX0Jy8Tx/pub?embedded=true" frameborder="0" width="90%" padding-left="16px" height="500" loading="lazy"></iframe>
-        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-      <iframe width="100%" padding-left="16px" height="315" src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" loading="lazy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <h3>Martin Dreams</h3>
-        <figure><figcaption>I'm Just a Man, Coretta</figcaption>
-        <audio controls><source src="/src/audio/I'm Just a Man, Coretta.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <figure><figcaption>We Shall Overcome... Someday</figcaption>
-        <audio controls><source src="/src/audio/We Shall Overcome...Someday.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio></figure>
-        <h3>Herb Smokes Herb</h3>
-         <iframe src="https://docs.google.com/document/d/18UTSAKArckpdtTHZftkonIJna8OY5tf2/pub?embedded=true" loading="lazy" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
-        <h3>Daphne in Dimension Nine</h3>
-        <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" loading="lazy" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
-      </div>  
+
+        <!-- Pied Piper -->
+        <section>
+          <h3>Pied Piper</h3>
+          <iframe src="https://docs.google.com/document/d/1_vsl990hx1jH2GescfKSIoTVO0m7cIoO/pub?embedded=true" frameborder="0" height="500"></iframe>
+          <figure>
+            <figcaption>I'm The Pied Piper</figcaption>
+            <audio controls>
+              <source src="/src/audio/I'm The Pied Piper.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+          <figure>
+            <figcaption>It's Nice To Be Nice</figcaption>
+            <audio controls>
+              <source src="/src/audio/It's Nice To Be Nice.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+          <figure>
+            <figcaption>Rats</figcaption>
+            <audio controls>
+              <source src="/src/audio/Rats.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+          <figure>
+            <figcaption>I Will Never Climb a Mountain</figcaption>
+            <audio controls>
+              <source src="/src/audio/I Will Never Climb a Mountain.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+        </section>
+
+        <!-- Mona Judy America -->
+        <section>
+          <h3>Mona Judy America</h3>
+          <iframe src="https://docs.google.com/document/d/1APypKm-o8UwNMkLhtAZMPCndhX0Jy8Tx/pub?embedded=true" frameborder="0" height="500"></iframe>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/ETMYXF4SBD4?si=N_LRwd4qfazbeGY_" frameborder="0" height="315" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/CdB-_PPFH80?si=rZG_nxD7e0htO1iU" frameborder="0" height="315" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/-4_2xr0Z87U?si=-l7JXv8FGV2XlBYe" frameborder="0" height="315" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/gxflcha-Qmg?si=IGnpw2ZCTgmMjfN0" frameborder="0" height="315" allowfullscreen></iframe>
+          </div>
+        </section>
+
+        <!-- Martin Dreams -->
+        <section>
+          <h3>Martin Dreams</h3>
+          <figure>
+            <figcaption>I'm Just a Man, Coretta</figcaption>
+            <audio controls>
+              <source src="/src/audio/I'm Just a Man, Coretta.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+          <figure>
+            <figcaption>We Shall Overcome... Someday</figcaption>
+            <audio controls>
+              <source src="/src/audio/We Shall Overcome...Someday.m4a" type="audio/x-m4a">
+              Your browser does not support the audio element.
+            </audio>
+          </figure>
+        </section>
+
+        <!-- Herb Smokes Herb -->
+        <section>
+          <h3>Herb Smokes Herb</h3>
+          <iframe src="https://docs.google.com/document/d/18UTSAKArckpdtTHZftkonIJna8OY5tf2/pub?embedded=true" frameborder="0" height="500"></iframe>
+        </section>
+
+        <!-- Daphne in Dimension Nine -->
+        <section>
+          <h3>Daphne in Dimension Nine</h3>
+          <iframe src="https://docs.google.com/document/d/1Mt3aUBCYhilpLEzGkxCmuZhhNr4ScEnf/pub?embedded=true" frameborder="0" height="500"></iframe>
+        </section>
+      </div>
     </div>
-  </div>
+  </main>
     <div class="footer-container"></div>
   </div>
 </body>
