--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     }
 
-
     label {
       font-size: 1.1em;
       color: #555;
@@ -78,6 +77,13 @@
 
     .social-media-section img:hover {
       transform: scale(1.1);
+    }
+
+    .menu-contact {
+      color: rgb(255, 255, 255) !important;
+      opacity: 1 !important;
+      font-weight: 700 !important;
+      font-size: 1.2em;
     }
 
   </style>
