--- a/about.html
+++ b/about.html
@@ -44,6 +44,13 @@
       font-style: italic;
     }
 
+    .menu-about {
+      color: rgb(255, 255, 255) !important;
+      opacity: 1 !important;
+      font-weight: 700 !important;
+      font-size: 1.2em;
+    }
+
   </style>
 </head>
 
