--- a/work/index.html
+++ b/work/index.html
@@ -42,6 +42,13 @@
       padding: 5px;
       border-radius: 5px;
     }
+
+    .menu-work {
+      color: rgb(255, 255, 255) !important;
+      opacity: 1 !important;
+      font-weight: 700 !important;
+      font-size: 1.2em;
+    }
   </style>
 </head>
 
