--- a/work/index.html
+++ b/work/index.html
@@ -43,11 +43,10 @@
       border-radius: 5px;
     }
 
-    .menu-work {
+     .dropbtn {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
       font-weight: 700 !important;
-      font-size: 1.2em;
     }
   </style>
 </head>
