--- a/work/childrensstories.html
+++ b/work/childrensstories.html
@@ -20,6 +20,11 @@
       opacity: 1 !important;
       font-weight: 700 !important;
     }
+     .dropbtn {
+      color: rgb(255, 255, 255) !important;
+      opacity: 1 !important;
+      font-weight: 700 !important;
+    }
   </style>
 </head>
 
