--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ iframe:hover {
 
 <body>
   <div class="menu-container">
-    <p class="menu-index">Welcome to Howard Zilber's Official Website</p>
-
+    <p class="menu-index">Welcome to Howard Zilber's Official Website</p></div>
   <div class="content-container">
     <h1>Latest News</h1>
 
@@ -73,7 +72,6 @@ iframe:hover {
   </div>
 
   <div class="footer-container"></div>
-  </div>
 
 </body>
 
