--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
+    body, html {
+    overflow-x: hidden;
+  }
     .content-container {
       max-width: 900px;
       margin: 40px auto;
@@ -117,7 +120,7 @@
     <div class="social-media-section">
       <h3>Follow Me</h3>
       <a href="https://youtube.com/@howardzilber?si=JvPLT3QVKKWzuJoc" target="_blank">
-        <img src="/src/images/logos/yt_logo_rgb_dark.png" alt="YouTube" width="400">
+        <img src="/src/images/logos/yt_logo_rgb_light.png" alt="YouTube Logo" width="400">
       </a>
     </div>
   </div>
