--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
+    body, html {
+    overflow-x: hidden;
+  }
     .content-container {
       max-width: 800px;
       margin: 40px auto;
