--- a/about.html
+++ b/about.html
@@ -15,10 +15,7 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
-    body, html {
-    overflow-x: hidden;
-  }
-    .content-container {
+.content-container {
       max-width: 800px;
       margin: 40px auto;
       padding: 30px;
@@ -63,7 +60,7 @@
   </div>
 
   <div class="content-container">
-    <div class="content">
+    <div class="content" style="overflow-x: hidden;">
       <div class="content-table">
         <h2>Letter from The Artist</h2>
         <p class="text">
