--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="css/custom.css" media="screen" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
@@ -16,9 +15,6 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
-    body, html {
-    overflow-x: hidden;
-  }
     .content-container {
       max-width: 900px;
       margin: 40px auto;
@@ -97,7 +93,7 @@
     <h1 style="color: white;">Howard Zilber | Contact</h1>
   </div>
 
-  <div class="content-container">
+  <div class="content-container" style="overflow-x: hidden;">
     <div class="content">
       <h3>Contact Form</h3>
       <form action="https://formspree.io/f/mrgnavrk" method="POST">
