--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
       <a href="/" style="display: inline-block; padding: 0; margin: 0; border: none;">
-          <img src="/src/images/icons/howardzilber_512x512_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">
+          <img src="/src/images/icons/howardzilber_piano_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">Howard Zilber
         </a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
