--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 100%; 
   max-width: 500px; 
-  height: auto;
+  height: 589px;
 }
 
 iframe {
