--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     }
    .iframe-container {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
