--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <div class="logo flex-row-center">
       <a href="/" style="display: inline-block; padding: 0; margin: 0; margin-top: 10px; border: none;">
           <img src="/src/images/icons/howardzilber_piano_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">
-        <span style="font-size: 16px; font-weight: bold; line-height: 50px;">Howard Zilber</span>
+        <span style="">Howard Zilber</span>
         </a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
