--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
         <a class="dropbtn" href="/work/">Work<i class="fas fa-caret-down"></i></a>
         <div class="dropdown-content">
           <a href="/work/childrensstories.html">Children's Stories</a>
-          <a href="/work/drama.html">Drama</a>
+          <a href="/work/drama/">Drama</a>
           <a href="/work/philosophy.html">Philosophy</a>
           <a href="/work/poetry.html">Poetry</a>
           <a href="/work/torahcommentary.html">Torah Commentary</a>
