--- a/about.html
+++ b/about.html
@@ -115,7 +115,15 @@
                 All blessings,<br>
                 Howard
             </p>
-        <img class="image" src="src/images/howardzilber_headshot.png" alt="Howard Zilber Headshot">
+        <img class="image" src="src/images/howardzilber_headshot.png" alt="Howard Zilber Headshot" style="
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+" onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 8px 12px rgba(0, 0, 0, 0.2)'" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 6px rgba(0, 0, 0, 0.1)'">
       </div>
     </div>
   </div>
