--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
   </div>
 
   <div class="content-container">
-    <div class="content">
+    <div class="content" style="max-width: 95%;">
       <h3>Contact Form</h3>
       <form action="https://formspree.io/f/mrgnavrk" method="POST">
         <label for="fname">First name:</label>
