--- a/index.html
+++ b/index.html
@@ -22,35 +22,40 @@
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
-   .iframe-container {
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 100%; 
-  max-width: 500px; 
-  height: 589px;
-}
 
-iframe {
-  width: 100%; 
-  height: 100%;
-  max-width: 500px;
-  max-height: 589px; 
-  border-radius: 10px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
+    .iframe-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 500px;
+      height: auto;
+    }
 
-iframe:hover {
-  transform: scale(1.03);
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-}
+    iframe {
+      width: 100%;
+      height: 100%;
+      max-width: 500px;
+      max-height: 589px;
+      border-radius: 10px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    iframe:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
     .menu-index {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
@@ -61,13 +66,14 @@ iframe:hover {
 </head>
 
 <body>
-  <div class="menu-container">
-    <p class="menu-index">Welcome to Howard Zilber's Official Website</p></div>
+  <div class="menu-container"></div>
   <div class="content-container">
     <h1>Latest News</h1>
 
     <div class="iframe-container">
-      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" width="500" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FRoslindaleOpenStudios%2Fposts%2Fpfbid02W89WinVpCkK8AFDPWVsCWQixhrtKtV466BykepHiG8Vc4V5WH9BmKRHir6wQx7Qkl&show_text=true&width=500" 
+              width="500" height="589" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+      </iframe>
     </div>
   </div>
 
