--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,9 @@
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
       <a href="/" style="display: inline-block; padding: 0; margin: 0; margin-top: 10px; border: none;">
+        <span style="display: inline-flex; align-items: center; padding: 0;">
           <img src="/src/images/icons/howardzilber_piano_icon.jpg" alt="Howard Zilber Logo" style="max-height: 50px;">
-        <span style="">Howard Zilber</span>
+        Howard Zilber</span>
         </a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
