--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     }
 
     .iframe-container {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 20px;
+      margin-top: 50px;
       padding: 20px;
       background-color: #f9f9f9;
       border-radius: 10px;
@@ -43,9 +44,7 @@
 
     iframe {
       width: 100%;
-      height: 100%;
       max-width: 500px;
-      max-height: 589px;
       border-radius: 10px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
