--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
       border-radius: 8px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       box-sizing: border-box;
+      width: 90%;
     }
 
     label {
