--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
      <div class="banner-table flex-row-space-between">
     <div class="banner-items flex-row-left flex-item">
       <a class="menu-index" href="/">Home</a><br>
-      <a class="menu-work" href="/work/">Work</a><br>
+      <a class="dropbtn" href="/work/">Work</a><br>
       <a class="menu-about" href="about.html">About</a><br>
       <a class="menu-contact" href="contact.html">Contact</a>
          </div>
