--- a/work/drama/musicals.html
+++ b/work/drama/musicals.html
@@ -50,7 +50,7 @@
     <div class="content">
       <div class="content-table flex-column">
         <a href="/work/drama/" class="back-btn">
-          <button class="dropbtn"><i class="fa fa-arrow-left"></i> Back</button>
+          <button style="border-width: 5px" class="dropbtn"><i class="fa fa-arrow-left"></i> Back</button>
         </a>
         <h2>Musicals</h2>
 
