--- a/work/drama/plays.html
+++ b/work/drama/plays.html
@@ -28,7 +28,7 @@
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
-        <a href="/work/drama/"><button><i class="fa fa-arrow-left"></i></button></a>
+        <a href="/work/drama/" style="border-width: 5px"><button><i class="fa fa-arrow-left"></i></button></a>
         <h2>Play</h2>
         <h3>Triple Jump</h3>
         <iframe src="https://docs.google.com/document/d/1m-UzwSvgt3SRtSWNdbHbECpRYLAlWvER/pub?embedded=true" frameborder="0" width="100%" height="500" loading="lazy"></iframe>
