--- a/work/drama/musicals.html
+++ b/work/drama/musicals.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <div class="menu-container">
+  <div class="menu-container"></div>
    <main class="content-container">
     <div class="content">
       <div class="content-table flex-column">
