--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   <style>
     .content-container {
       max-width: 1100px;
-      margin: 50px auto;
+      margin: 50px 200px;
       padding: 20px;
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
-      gap: 20px;
     }
 
     .iframe-container {
