--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
+      width: 55%;
     }
 
     .iframe-container {
