--- a/about.html
+++ b/about.html
@@ -110,9 +110,11 @@
             <p class="text">
                 That said, please look, read, listen, and enjoy. Any helpful comments would be appreciated, as would opportunities for collaboration. I would especially appreciate any help that gets this work a bit further into the world.
             </p>
-            <p class="text signature">
+            <p class="text">
                 I have two reasons I think I am here on earth: to be father to my daughter Zoey, and to make this work.<br><br>
-                All blessings,<br>
+                All blessings,
+            </p>    
+          <p class="text signature">
                 Howard
             </p>
         <img class="image" src="src/images/howardzilber_headshot.png" alt="Howard Zilber Headshot" style="
